# radiation_damage_in_silicon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  analyze.py  run.mac  vis.mac
include/: ActionInitialization.h  DetectorConstruction.h  ElectronCaptureProcess.h  OutputingStrategy.h  PhysicsList.h  PrimaryGeneratorAction.h  RunAction.h  SteppingAction.h  TrackingAction.h
src/: ActionInitialization.cpp  DetectorConstruction.cpp  ElectronCaptureProcess.cpp  OutputingStrategy.cpp  PhysicsList.cpp  PrimaryGeneratorAction.cpp  RunAction.cpp  SteppingAction.cpp  TrackingAction.cpp  main.cpp
